SLING-12643 : Support Jakarta ServletAPI in Scripting (Initial support)
(cherry picked from commit 5d506f45b31ee51bd13b306209618b6274a980a8)